# PARCSANN_V3

./: .pre-commit-config.yaml  pyproject.toml
configs/: config.yaml  config_default.yaml
notebooks/: sandbox.ipynb  test.ipynb
src/parcsann/: config.py
src/parcsann-v3/: config.py
src/parcsann/read_data/: load_dataset.py  nuclear_code_data.py
