[project]
name = "parcsann"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bayesian-optimization>=3.2.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "keras>=3.13.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "scikeras>=0.13.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "nbstripout>=0.9.0",
    "pre-commit>=4.5.1",
]
